Fix links to data

--- a/resources/genome_info/index.html
+++ b/resources/genome_info/index.html
@@ -6,7 +6,7 @@ tools_menu: true
 
 wm82_a1_details:
 - accession: "GCF_000004515.3"
-  url: "https://www.ncbi.nlm.nih.gov/assembly/https://www.ncbi.nlm.nih.gov/assembly/GCF_000004515.3/"
+  url: "https://www.ncbi.nlm.nih.gov/assembly/GCF_000004515.3/"
   source: "RefSeq"
 - accession: "GCA_000004515.2"
   url: "https://www.ncbi.nlm.nih.gov/datasets/genome/GCF_000004515.3/"
