--- a/tools/search/gene.html
+++ b/tools/search/gene.html
@@ -11,7 +11,7 @@ title: Gene Search
 <script type="text/javascript" src="/assets/js/graphql/get-genes.js"></script>
 
 <!-- the custom gene search element -->
-<lis-gene-search-element id="gene-search"></lis-gene-search-element>
+<lis-gene-search-element id="gene-search" genus="Glycine"></lis-gene-search-element>
 <lis-modal-element modalId="modal">
   <lis-linkout-element id="linkouts"></lis-linkout-element>
 </lis-modal-element>
