--- a/tools/search/gene.html
+++ b/tools/search/gene.html
@@ -5,32 +5,30 @@ web_components: true
 ---
 <!-- the custom gene search element -->
 <lis-gene-search-element id="gene-search" genus="Glycine"></lis-gene-search-element>
-<lis-modal-element id="modal" modalId="modal">
+<lis-modal-element modalId="modal">
   <lis-linkout-element id="linkouts"></lis-linkout-element>
 </lis-modal-element>
 
 <script type="module">
-  import {getOrganismsFormDataFunction, geneSearchFunctionFactory, getGeneLinkouts, geneLinkoutsFunction, geneIdentifierModalLinkFactory, locationModalLinkFactory} from "lis-graphql";
+  import {getOrganismsFormDataFunction, geneSearchFunctionFactory, allLinkoutsFunction, geneLinkoutsFunction, geneIdentifierModalLinkFactory, locationModalLinkFactory} from "lis-graphql";
   const geneSearchElement = document.getElementById('gene-search');
   geneSearchElement.formDataFunction = getOrganismsFormDataFunction;
   geneSearchElement.searchFunction = geneSearchFunctionFactory(geneIdentifierModalLinkFactory('modal'), locationModalLinkFactory('modal'));
   const linkoutElement = document.getElementById('linkouts');
-  linkoutElement.linkoutFunction = geneLinkoutsFunction(getGeneLinkouts());
-  window.onload = (event) => {
-    const modal = document.getElementById('modal');
-        modal.addEventListener('toggle', (event) => {
-          const [{$el: link}, ...uikitComponents] = event.detail;
-          const {gene, location, start, end} = link.dataset;
-          let type = '';
-          let variables = {};
-          if (gene !== undefined) {
-            type = 'gene';
-            variables = {identifier: gene};
-          } else if (location !== undefined && start !== undefined && end !== undefined) {
-            type = 'location';
-            variables = {identifier: location, start: parseInt(start), end: parseInt(end)};
-          }
-          linkoutElement.linkoutFunction = geneLinkoutsFunction(getGeneLinkouts({type, variables}));
-        });
-  }
+  const modal = document.getElementById('modal');
+  modal.addEventListener('toggle', (event) => {
+    const [{$el: link}, ...uikitComponents] = event.detail;
+    const {identifier, type, start, end} = link.dataset;
+    let linkoutData = {};
+    
+    if( start !== undefined && end !== undefined) {
+      linkoutData = {identifier, start: parseInt(start), end: parseInt(end)};
+    } else {
+      linkoutData = {identifier};
+    }
+
+    linkoutElement.linkoutFunction=allLinkoutsFunction;
+    linkoutElement.getLinkouts({type, linkoutData});
+    
+  });
 </script>
