--- a/tools/snp50k/index.html
+++ b/tools/snp50k/index.html
@@ -95,8 +95,8 @@ layout: default
   </table>
  
 	      <h2>Download SNP Data</h2>
-				The SoySNP50K iSelect BeadChip has been used to genotype the <a href='http://www.ars.usda.gov/main/site_main.htm?modecode=36-11-05-00'>USDA Soybean Germplasm Collection</a> 
-				(<a href='http://www.g3journal.org/content/5/10/1999.abstract' style='font-size:smaller;'><span style='font-style:italic;'>Song, Qijian, David L. Hyten, Gaofeng Jia, Charles V. Quigley, Edward W. Fickus, 
+				The SoySNP50K iSelect BeadChip has been used to genotype the <a href='https://www.ars.usda.gov/main/site_main.htm?modecode=36-11-05-00'>USDA Soybean Germplasm Collection</a> 
+				(<a href='https://www.g3journal.org/content/5/10/1999.abstract' style='font-size:smaller;'><span style='font-style:italic;'>Song, Qijian, David L. Hyten, Gaofeng Jia, Charles V. Quigley, Edward W. Fickus, 
 				Randall L. Nelson, and Perry B. Cregan. 2015. Fingerprinting soybean germplasm and its utility in genomic research, G3: Genes| Genomes| Genetics</span> 
 				50(10):1999-2006.</a>) and the data generously provided by the authors.<br /><br />
 				SoySNP50K SNP positional information in relationship to the Wm82.a2 and Wm82.a1 assemblies can be found in <span style='font-style:italic;'>
