center bottom tables when screen is small

--- a/tools/snp50k/index.html
+++ b/tools/snp50k/index.html
@@ -111,15 +111,14 @@ redirect_from: /snps/
 				The complete data set for 20,087 G. max and G. soja accessions genotyped with 42,509 SNPs is available for Wm82.a1 and Wm82.a2 in either vcf or HapMap format. You can extract a large list of
 				cultivars using <a href="https://github.com/samtools/bcftools" target="_blank">BCFtools</a> and a VCF file chosen below.</br></br> 
 				
-        <style>#dltable{margin-top:1em;border-collapse:collapse;border:solid;}
+        <style>
+        #dltable{margin-top:1em;border-collapse:collapse;border:solid;margin-left: auto;margin-right: auto;}
 				#dltable th{border:solid;}
 				.bytecount{font-weight:normal;font-size:8pt;}
-        table{
-          margin-left: auto;
-          margin-right: auto;
-        }
+        #maftable{margin-left: auto;margin-right: auto;}
         </style>
-								<a name="dltable"></a>
+
+	<a name="dltable"></a>
 
   <div class="uk-align-left@m">
     <table id='dltable'>
@@ -153,10 +152,8 @@ redirect_from: /snps/
       </tr>
       </table>
   
-
     <br />
-    
-  
+
     <table id='maftable'>
       <tr><th colspa='4'>Download file of Minor Allele<br> Frequencies (MAF) of SNPs</th></tr>
       <tr><th><a href='https://data.soybase.org/Glycine/max/diversity/Wm82.gnm1.div.Song_Hyten_2015/glyma.Wm82.gnm1.div.Song_Hyten_2015.maf.txt.gz'>MAFs</a><br /></a>
