tools/snp50k/index.html fix Gmo4 to Gm04, about/lgs_and_chromosomes/index.html update failing link

--- a/tools/snp50k/index.html
+++ b/tools/snp50k/index.html
@@ -22,7 +22,7 @@ redirect_from: /snps/
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm1&tracks=Wm82.gnm1.ann1,Wm82.gnm1.mrk.SoySNP50K&loc=glyma.Wm82.gnm1.Gm01:1-1000000" target="_blank">Gm01</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm1&tracks=Wm82.gnm1.ann1,Wm82.gnm1.mrk.SoySNP50K&loc=glyma.Wm82.gnm1.Gm02:1-1000000" target="_blank">Gm02</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm1&tracks=Wm82.gnm1.ann1,Wm82.gnm1.mrk.SoySNP50K&loc=glyma.Wm82.gnm1.Gm03:1-1000000" target="_blank">Gm03</a></td>
-      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm1&tracks=Wm82.gnm1.ann1,Wm82.gnm1.mrk.SoySNP50K&loc=glyma.Wm82.gnm1.Gm04:1-1000000" target="_blank">Gmo4</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm1&tracks=Wm82.gnm1.ann1,Wm82.gnm1.mrk.SoySNP50K&loc=glyma.Wm82.gnm1.Gm04:1-1000000" target="_blank">Gm04</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm1&tracks=Wm82.gnm1.ann1,Wm82.gnm1.mrk.SoySNP50K&loc=glyma.Wm82.gnm1.Gm05:1-1000000" target="_blank">Gm05</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm1&tracks=Wm82.gnm1.ann1,Wm82.gnm1.mrk.SoySNP50K&loc=glyma.Wm82.gnm1.Gm06:1-1000000" target="_blank">Gm06</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm1&tracks=Wm82.gnm1.ann1,Wm82.gnm1.mrk.SoySNP50K&loc=glyma.Wm82.gnm1.Gm07:1-1000000" target="_blank">Gm07</a></td>
@@ -45,7 +45,7 @@ redirect_from: /snps/
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm2&tracks=Wm82.gnm2.ann1,Wm82.gnm2.mrk.SoySNP50K&loc=glyma.Wm82.gnm2.Gm01:1-1000000" target="_blank">Gm01</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm2&tracks=Wm82.gnm2.ann1,Wm82.gnm2.mrk.SoySNP50K&loc=glyma.Wm82.gnm2.Gm02:1-1000000" target="_blank">Gm02</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm2&tracks=Wm82.gnm2.ann1,Wm82.gnm2.mrk.SoySNP50K&loc=glyma.Wm82.gnm2.Gm03:1-1000000" target="_blank">Gm03</a></td>
-      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm2&tracks=Wm82.gnm2.ann1,Wm82.gnm2.mrk.SoySNP50K&loc=glyma.Wm82.gnm2.Gm04:1-1000000" target="_blank">Gmo4</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm2&tracks=Wm82.gnm2.ann1,Wm82.gnm2.mrk.SoySNP50K&loc=glyma.Wm82.gnm2.Gm04:1-1000000" target="_blank">Gm04</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm2&tracks=Wm82.gnm2.ann1,Wm82.gnm2.mrk.SoySNP50K&loc=glyma.Wm82.gnm2.Gm05:1-1000000" target="_blank">Gm05</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm2&tracks=Wm82.gnm2.ann1,Wm82.gnm2.mrk.SoySNP50K&loc=glyma.Wm82.gnm2.Gm06:1-1000000" target="_blank">Gm06</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm2&tracks=Wm82.gnm2.ann1,Wm82.gnm2.mrk.SoySNP50K&loc=glyma.Wm82.gnm2.Gm07:1-1000000" target="_blank">Gm07</a></td>
@@ -68,7 +68,7 @@ redirect_from: /snps/
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm4&tracks=Wm82.gnm4.ann1,Wm82.gnm4.mrk.SoySNP50K&loc=glyma.Wm82.gnm4.Gm01:1-1000000" target="_blank">Gm01</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm4&tracks=Wm82.gnm4.ann1,Wm82.gnm4.mrk.SoySNP50K&loc=glyma.Wm82.gnm4.Gm02:1-1000000" target="_blank">Gm02</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm4&tracks=Wm82.gnm4.ann1,Wm82.gnm4.mrk.SoySNP50K&loc=glyma.Wm82.gnm4.Gm03:1-1000000" target="_blank">Gm03</a></td>
-      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm4&tracks=Wm82.gnm4.ann1,Wm82.gnm4.mrk.SoySNP50K&loc=glyma.Wm82.gnm4.Gm04:1-1000000" target="_blank">Gmo4</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm4&tracks=Wm82.gnm4.ann1,Wm82.gnm4.mrk.SoySNP50K&loc=glyma.Wm82.gnm4.Gm04:1-1000000" target="_blank">Gm04</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm4&tracks=Wm82.gnm4.ann1,Wm82.gnm4.mrk.SoySNP50K&loc=glyma.Wm82.gnm4.Gm05:1-1000000" target="_blank">Gm05</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm4&tracks=Wm82.gnm4.ann1,Wm82.gnm4.mrk.SoySNP50K&loc=glyma.Wm82.gnm4.Gm06:1-1000000" target="_blank">Gm06</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm4&tracks=Wm82.gnm4.ann1,Wm82.gnm4.mrk.SoySNP50K&loc=glyma.Wm82.gnm4.Gm07:1-1000000" target="_blank">Gm07</a></td>
