Update tools/snp50k/index.html with links to SNP50k markers on WM82.A6

--- a/tools/snp50k/index.html
+++ b/tools/snp50k/index.html
@@ -86,6 +86,29 @@ redirect_from: /snps/
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm4&tracks=Wm82.gnm4.ann1,Wm82.gnm4.mrk.SoySNP50K&loc=glyma.Wm82.gnm4.Gm19:1-1000000" target="_blank">Gm19</a></td>
       <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm4&tracks=Wm82.gnm4.ann1,Wm82.gnm4.mrk.SoySNP50K&loc=glyma.Wm82.gnm4.Gm20:1-1000000" target="_blank">Gm20</a></td>
     </tr>
+    <tr>
+      <th><b>Wm82.a6</b></th>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm01:1-1000000" target="_blank">Gm01</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm02:1-1000000" target="_blank">Gm02</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm03:1-1000000" target="_blank">Gm03</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm04:1-1000000" target="_blank">Gm04</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm05:1-1000000" target="_blank">Gm05</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm06:1-1000000" target="_blank">Gm06</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm07:1-1000000" target="_blank">Gm07</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm08:1-1000000" target="_blank">Gm08</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm09:1-1000000" target="_blank">Gm09</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm10:1-1000000" target="_blank">Gm10</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm11:1-1000000" target="_blank">Gm11</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm12:1-1000000" target="_blank">Gm12</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm13:1-1000000" target="_blank">Gm13</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm14:1-1000000" target="_blank">Gm14</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm15:1-1000000" target="_blank">Gm15</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm16:1-1000000" target="_blank">Gm16</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm17:1-1000000" target="_blank">Gm17</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm18:1-1000000" target="_blank">Gm18</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm19:1-1000000" target="_blank">Gm19</a></td>
+      <td><a href="/assets/js/jbrowse/?assembly=Wm82.gnm6&tracks=Wm82.gnm6.ann1,Wm82.gnm6.mrk.SoySNP50K&loc=glyma.Wm82.gnm6.Gm20:1-1000000" target="_blank">Gm20</a></td>
+    </tr>
   </table>
 </div>
 	      <h2>Download SNP Data</h2>
@@ -149,7 +172,4 @@ redirect_from: /snps/
         <a href="https://data.soybase.org/Glycine/max/diversity/Wm82.gnm2.div.Song_Hyten_2015/glyma.Wm82.gnm2.div.Song_Hyten_2015.AlleleCount.tsv.gz">Download allele counts for each accession in the dataset</a>
       </div>
 
-
    </div>
-
-
